checkpoint: safe checkpoint in code

--- a/public/profile.html
+++ b/public/profile.html
@@ -72,103 +72,103 @@
             <h2>Conquistas</h2>
             <p id="achievementsProgress" class="achievement-progress"></p>
             <div id="achievementsGrid" class="achievements-grid">
-                <article class="achievement-item locked" data-achievement-key="CGFerro" data-achievement-name="CGFerro">
-                    <img src="/uploads/trofeus/ferro.png" alt="Troféu CGFerro">
+                <article class="achievement-item locked" data-achievement-key="CGFerro">
+                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="Troféu bloqueado">
                     <strong>??????</strong>
                     <span class="achievement-description">???????</span>
                 </article>
-                <article class="achievement-item locked" data-achievement-key="CGBronze" data-achievement-name="CGBronze">
-                    <img src="/uploads/trofeus/bronze.png" alt="Troféu CGBronze">
+                <article class="achievement-item locked" data-achievement-key="CGBronze">
+                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="Troféu bloqueado">
                     <strong>??????</strong>
                     <span class="achievement-description">???????</span>
                 </article>
-                <article class="achievement-item locked" data-achievement-key="CGPrata" data-achievement-name="CGPrata">
-                    <img src="/uploads/trofeus/prata.png" alt="Troféu CGPrata">
+                <article class="achievement-item locked" data-achievement-key="CGPrata">
+                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="Troféu bloqueado">
                     <strong>??????</strong>
                     <span class="achievement-description">???????</span>
                 </article>
-                <article class="achievement-item locked" data-achievement-key="CGOuro" data-achievement-name="CGOuro">
-                    <img src="/uploads/trofeus/ouro.png" alt="Troféu CGOuro">
+                <article class="achievement-item locked" data-achievement-key="CGOuro">
+                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="Troféu bloqueado">
                     <strong>??????</strong>
                     <span class="achievement-description">???????</span>
                 </article>
-                <article class="achievement-item locked" data-achievement-key="CGDiamante" data-achievement-name="CGDiamante">
-                    <img src="/uploads/trofeus/diamante.png" alt="Troféu CGDiamante">
+                <article class="achievement-item locked" data-achievement-key="CGDiamante">
+                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="Troféu bloqueado">
                     <strong>??????</strong>
                     <span class="achievement-description">???????</span>
                 </article>
-                <article class="achievement-item locked" data-achievement-key="CGMaster" data-achievement-name="CGMaster">
-                    <img src="/uploads/trofeus/master.png" alt="Troféu CGMaster">
+                <article class="achievement-item locked" data-achievement-key="CGMaster">
+                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="Troféu bloqueado">
                     <strong>??????</strong>
                     <span class="achievement-description">???????</span>
                 </article>
-                <article class="achievement-item locked" data-achievement-key="CGAcao" data-achievement-name="CGAcao">
-                    <img src="/uploads/trofeus/acao.png" alt="Troféu CGAção">
+                <article class="achievement-item locked" data-achievement-key="CGAcao">
+                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="Troféu bloqueado">
                     <strong>??????</strong>
                     <span class="achievement-description">???????</span>
                 </article>
-                <article class="achievement-item locked" data-achievement-key="CGAventura" data-achievement-name="CGAventura">
-                    <img src="/uploads/trofeus/CGAventura.png" alt="Troféu CGAventura">
+                <article class="achievement-item locked" data-achievement-key="CGAventura">
+                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="Troféu bloqueado">
                     <strong>??????</strong>
                     <span class="achievement-description">???????</span>
                 </article>
-                <article class="achievement-item locked" data-achievement-key="CGDrama" data-achievement-name="CGDrama">
-                    <img src="/uploads/trofeus/CGDrama.png" alt="Troféu CGDrama">
+                <article class="achievement-item locked" data-achievement-key="CGDrama">
+                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="Troféu bloqueado">
                     <strong>??????</strong>
                     <span class="achievement-description">???????</span>
                 </article>
-                <article class="achievement-item locked" data-achievement-key="CGNarrativo" data-achievement-name="CGNarrativo">
-                    <img src="/uploads/trofeus/CGNarrativo.png" alt="Troféu CGNarrativo">
+                <article class="achievement-item locked" data-achievement-key="CGNarrativo">
+                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="Troféu bloqueado">
                     <strong>??????</strong>
                     <span class="achievement-description">???????</span>
                 </article>
-                <article class="achievement-item locked" data-achievement-key="CGRPG" data-achievement-name="CGRPG">
-                    <img src="/uploads/trofeus/CGRPG.png" alt="Troféu CGRPG">
+                <article class="achievement-item locked" data-achievement-key="CGRPG">
+                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="Troféu bloqueado">
                     <strong>??????</strong>
                     <span class="achievement-description">???????</span>
                 </article>
-                <article class="achievement-item locked" data-achievement-key="CGPlataforma" data-achievement-name="CGPlataforma">
-                    <img src="/uploads/trofeus/CGPlataforma.png" alt="Troféu CGPlataforma">
+                <article class="achievement-item locked" data-achievement-key="CGPlataforma">
+                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="Troféu bloqueado">
                     <strong>??????</strong>
                     <span class="achievement-description">???????</span>
                 </article>
-                <article class="achievement-item locked" data-achievement-key="CGCorrida" data-achievement-name="CGCorrida">
-                    <img src="/uploads/trofeus/CGCorrida.png" alt="Troféu CGCorrida">
+                <article class="achievement-item locked" data-achievement-key="CGCorrida">
+                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="Troféu bloqueado">
                     <strong>??????</strong>
                     <span class="achievement-description">???????</span>
                 </article>
-                <article class="achievement-item locked" data-achievement-key="CGMundoAberto" data-achievement-name="CGMundoAberto">
-                    <img src="/uploads/trofeus/CGMundoAberto.png" alt="Troféu CGMundoAberto">
+                <article class="achievement-item locked" data-achievement-key="CGMundoAberto">
+                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="Troféu bloqueado">
                     <strong>??????</strong>
                     <span class="achievement-description">???????</span>
                 </article>
-                <article class="achievement-item locked" data-achievement-key="CGTiro" data-achievement-name="CGTiro">
-                    <img src="/uploads/trofeus/tiro.png" alt="Troféu CGTiro">
+                <article class="achievement-item locked" data-achievement-key="CGTiro">
+                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="Troféu bloqueado">
                     <strong>??????</strong>
                     <span class="achievement-description">???????</span>
                 </article>
-                <article class="achievement-item locked" data-achievement-key="CGTerror" data-achievement-name="CGTerror">
-                    <img src="/uploads/trofeus/terror.png" alt="Troféu CGTerror">
+                <article class="achievement-item locked" data-achievement-key="CGTerror">
+                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="Troféu bloqueado">
                     <strong>??????</strong>
                     <span class="achievement-description">???????</span>
                 </article>
-                <article class="achievement-item locked" data-achievement-key="CGSouls" data-achievement-name="CGSouls">
-                    <img src="/uploads/trofeus/souls.png" alt="Troféu CGSouls">
+                <article class="achievement-item locked" data-achievement-key="CGSouls">
+                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="Troféu bloqueado">
                     <strong>??????</strong>
                     <span class="achievement-description">???????</span>
                 </article>
-                <article class="achievement-item locked" data-achievement-key="CGAwards" data-achievement-name="CGAwards">
-                    <img src="/uploads/trofeus/CGAwards.png" alt="Troféu CGAwards">
+                <article class="achievement-item locked" data-achievement-key="CGAwards">
+                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="Troféu bloqueado">
                     <strong>??????</strong>
                     <span class="achievement-description">???????</span>
                 </article>
-                <article class="achievement-item locked" data-achievement-key="CGOld" data-achievement-name="CGOld">
-                    <img src="/uploads/trofeus/CGOld.png" alt="Troféu CGOld">
+                <article class="achievement-item locked" data-achievement-key="CGOld">
+                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="Troféu bloqueado">
                     <strong>??????</strong>
                     <span class="achievement-description">???????</span>
                 </article>
-                <article class="achievement-item locked" data-achievement-key="CGNewba" data-achievement-name="CGNewba">
-                    <img src="/uploads/trofeus/CGNewba.png" alt="Troféu CGNewba">
+                <article class="achievement-item locked" data-achievement-key="CGNewba">
+                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="Troféu bloqueado">
                     <strong>??????</strong>
                     <span class="achievement-description">???????</span>
                 </article>
@@ -213,6 +213,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
