add: release web application final

--- a/public/profile.html
+++ b/public/profile.html
@@ -74,103 +74,103 @@
             <div id="achievementsGrid" class="achievements-grid">
                 <article class="achievement-item locked" data-achievement-key="CGFerro">
                     <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="Troféu bloqueado">
-                    <strong>??????</strong>
-                    <span class="achievement-description">???????</span>
+                    <strong></strong>
+                    <span class="achievement-description"></span>
                 </article>
                 <article class="achievement-item locked" data-achievement-key="CGBronze">
                     <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="Troféu bloqueado">
-                    <strong>??????</strong>
-                    <span class="achievement-description">???????</span>
+                    <strong></strong>
+                    <span class="achievement-description"></span>
                 </article>
                 <article class="achievement-item locked" data-achievement-key="CGPrata">
                     <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="Troféu bloqueado">
-                    <strong>??????</strong>
-                    <span class="achievement-description">???????</span>
+                    <strong></strong>
+                    <span class="achievement-description"></span>
                 </article>
                 <article class="achievement-item locked" data-achievement-key="CGOuro">
                     <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="Troféu bloqueado">
-                    <strong>??????</strong>
-                    <span class="achievement-description">???????</span>
+                    <strong></strong>
+                    <span class="achievement-description"></span>
                 </article>
                 <article class="achievement-item locked" data-achievement-key="CGDiamante">
                     <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="Troféu bloqueado">
-                    <strong>??????</strong>
-                    <span class="achievement-description">???????</span>
+                    <strong></strong>
+                    <span class="achievement-description"></span>
                 </article>
                 <article class="achievement-item locked" data-achievement-key="CGMaster">
                     <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="Troféu bloqueado">
-                    <strong>??????</strong>
-                    <span class="achievement-description">???????</span>
+                    <strong></strong>
+                    <span class="achievement-description"></span>
                 </article>
                 <article class="achievement-item locked" data-achievement-key="CGAcao">
                     <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="Troféu bloqueado">
-                    <strong>??????</strong>
-                    <span class="achievement-description">???????</span>
+                    <strong></strong>
+                    <span class="achievement-description"></span>
                 </article>
                 <article class="achievement-item locked" data-achievement-key="CGAventura">
                     <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="Troféu bloqueado">
-                    <strong>??????</strong>
-                    <span class="achievement-description">???????</span>
+                    <strong></strong>
+                    <span class="achievement-description"></span>
                 </article>
                 <article class="achievement-item locked" data-achievement-key="CGDrama">
                     <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="Troféu bloqueado">
-                    <strong>??????</strong>
-                    <span class="achievement-description">???????</span>
+                    <strong></strong>
+                    <span class="achievement-description"></span>
                 </article>
                 <article class="achievement-item locked" data-achievement-key="CGNarrativo">
                     <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="Troféu bloqueado">
-                    <strong>??????</strong>
-                    <span class="achievement-description">???????</span>
+                    <strong></strong>
+                    <span class="achievement-description"></span>
                 </article>
                 <article class="achievement-item locked" data-achievement-key="CGRPG">
                     <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="Troféu bloqueado">
-                    <strong>??????</strong>
-                    <span class="achievement-description">???????</span>
+                    <strong></strong>
+                    <span class="achievement-description"></span>
                 </article>
                 <article class="achievement-item locked" data-achievement-key="CGPlataforma">
                     <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="Troféu bloqueado">
-                    <strong>??????</strong>
-                    <span class="achievement-description">???????</span>
+                    <strong></strong>
+                    <span class="achievement-description"></span>
                 </article>
                 <article class="achievement-item locked" data-achievement-key="CGCorrida">
                     <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="Troféu bloqueado">
-                    <strong>??????</strong>
-                    <span class="achievement-description">???????</span>
+                    <strong></strong>
+                    <span class="achievement-description"></span>
                 </article>
                 <article class="achievement-item locked" data-achievement-key="CGMundoAberto">
                     <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="Troféu bloqueado">
-                    <strong>??????</strong>
-                    <span class="achievement-description">???????</span>
+                    <strong></strong>
+                    <span class="achievement-description"></span>
                 </article>
                 <article class="achievement-item locked" data-achievement-key="CGTiro">
                     <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="Troféu bloqueado">
-                    <strong>??????</strong>
-                    <span class="achievement-description">???????</span>
+                    <strong></strong>
+                    <span class="achievement-description"></span>
                 </article>
                 <article class="achievement-item locked" data-achievement-key="CGTerror">
                     <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="Troféu bloqueado">
-                    <strong>??????</strong>
-                    <span class="achievement-description">???????</span>
+                    <strong></strong>
+                    <span class="achievement-description"></span>
                 </article>
                 <article class="achievement-item locked" data-achievement-key="CGSouls">
                     <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="Troféu bloqueado">
-                    <strong>??????</strong>
-                    <span class="achievement-description">???????</span>
+                    <strong></strong>
+                    <span class="achievement-description"></span>
                 </article>
                 <article class="achievement-item locked" data-achievement-key="CGAwards">
                     <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="Troféu bloqueado">
-                    <strong>??????</strong>
-                    <span class="achievement-description">???????</span>
+                    <strong></strong>
+                    <span class="achievement-description"></span>
                 </article>
                 <article class="achievement-item locked" data-achievement-key="CGOld">
                     <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="Troféu bloqueado">
-                    <strong>??????</strong>
-                    <span class="achievement-description">???????</span>
+                    <strong></strong>
+                    <span class="achievement-description"></span>
                 </article>
                 <article class="achievement-item locked" data-achievement-key="CGNewba">
                     <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="Troféu bloqueado">
-                    <strong>??????</strong>
-                    <span class="achievement-description">???????</span>
+                    <strong></strong>
+                    <span class="achievement-description"></span>
                 </article>
             </div>
         </section>
