--- a/public/round.html
+++ b/public/round.html
@@ -22,7 +22,7 @@
 
     <main class="container">
         <section class="hero-card">
-            <p class="kicker">Gestao de Rodada</p>
+            <p class="kicker">Gestão de Rodada</p>
             <h1 id="roundHeading">Rodada</h1>
             <p id="roundStatusText">Carregando rodada...</p>
             <p id="roundFeedback" class="feedback"></p>
@@ -51,7 +51,7 @@
         </section>
 
         <section id="draftSpectatorSection" class="card hidden">
-            <h2>Espectando Nova Rodada</h2>
+            <h2>Esperando Nova Rodada</h2>
             <p id="spectatorDraftText">Aguarde o criador finalizar o sorteio.</p>
         </section>
 
