--- a/public/round.html
+++ b/public/round.html
@@ -147,7 +147,10 @@
                             <input name="interestScore" type="number" min="1" max="10" required>
                         </div>
                     </div>
-                    <button class="btn" type="submit">Salvar Nota Naval</button>
+                    <div class="rating-actions">
+                        <button class="btn" type="submit">Salvar Nota Naval</button>
+                        <button id="clearRatingBtn" class="btn btn-outline" type="button">Limpar Voto</button>
+                    </div>
                 </form>
 
                 <div class="naval-chart-wrap">
