--- a/public/profile.html
+++ b/public/profile.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
@@ -69,19 +69,88 @@
                 <button id="psnLinkBtn" class="btn btn-psn hidden" type="button">Vincular PSN</button>
                 <button id="psnUnlinkBtn" class="btn btn-outline hidden" type="button">Desvincular PSN</button>
             </div>
+            <div id="psnLinkSteps" class="psn-link-steps hidden">
+                <p id="psnLinkStepsTitle" class="psn-link-steps-title">Passo a passo para vincular PSN:</p>
+                <ol class="psn-link-steps-list">
+                    <li>Logue com sua conta PSN nesse navegador.</li>
+                    <li>
+                        Acesse o link
+                        <a class="psn-link-step-link" href="https://ca.account.sony.com/api/v1/ssocookie" target="_blank" rel="noopener noreferrer">https://ca.account.sony.com/api/v1/ssocookie</a>.
+                    </li>
+                    <li>
+                        Com o JSON aberto, copie o conteudo e clique no botao pegar NPSSO.
+                        <div class="psn-grab-row">
+                            <button id="psnGrabNpssoBtn" class="btn btn-outline" type="button">Pegar NPSSO</button>
+                        </div>
+                    </li>
+                </ol>
+                <p id="psnGrabNpssoFeedback" class="feedback hidden"></p>
+            </div>
             <p class="psn-help-text">
                 Ao vincular, o sistema sincroniza automaticamente seus trofeus da PSN e exibe para todos no perfil.
-                Se precisar, acesse
-                <a href="https://ca.account.sony.com/api/v1/ssocookie" target="_blank" rel="noopener noreferrer">https://ca.account.sony.com/api/v1/ssocookie</a>
-                para obter o NPSSO.
+                Siga os passos indicados para vincular.
             </p>
             <div id="psnProfileHead" class="psn-profile-head hidden"></div>
             <div id="psnTitlesGrid" class="psn-titles-grid"></div>
-            <div class="inline-actions">
-                <button id="psnShowMoreBtn" class="btn btn-outline hidden" type="button">Ver mais</button>
+            <div id="psnTitlesPagination" class="psn-pagination hidden" aria-label="Paginacao de jogos PSN">
+                <button id="psnTitlesPrevBtn" class="btn btn-outline" type="button">Anterior</button>
+                <span id="psnTitlesPageLabel" class="psn-pagination-label">Pagina 1 de 1</span>
+                <button id="psnTitlesNextBtn" class="btn btn-outline" type="button">Proxima</button>
             </div>
             <p id="psnFeedback" class="feedback"></p>
         </section>
+        <div id="psnTitleDetailsModal" class="modal hidden" role="dialog" aria-modal="true" aria-labelledby="psnTitleDetailsName">
+            <div class="modal-card psn-title-details-modal-card">
+                <button
+                    id="psnTitleDetailsCloseIconBtn"
+                    class="psn-modal-close-icon"
+                    type="button"
+                    aria-label="Fechar detalhes do jogo"
+                    title="Fechar"
+                >
+                    X
+                </button>
+                <div class="row-between psn-title-details-head">
+                    <div class="psn-title-details-head-main">
+                        <img id="psnTitleDetailsIcon" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="Jogo PSN">
+                        <div>
+                            <h3 id="psnTitleDetailsName">Detalhes do jogo</h3>
+                            <p id="psnTitleDetailsMeta" class="psn-title-details-meta"></p>
+                        </div>
+                    </div>
+                    <button id="psnTitleDetailsCloseBtn" class="btn btn-quiet" type="button">Fechar</button>
+                </div>
+                <div id="psnTitleDetailsBody" class="psn-title-details-body"></div>
+            </div>
+        </div>
+        <div id="psnTierDetailsModal" class="modal hidden" role="dialog" aria-modal="true" aria-labelledby="psnTierDetailsTitle">
+            <div class="modal-card psn-tier-details-modal-card">
+                <button
+                    id="psnTierDetailsCloseIconBtn"
+                    class="psn-modal-close-icon"
+                    type="button"
+                    aria-label="Fechar detalhes de trofeus"
+                    title="Fechar"
+                >
+                    X
+                </button>
+                <div class="row-between psn-tier-details-head">
+                    <h3 id="psnTierDetailsTitle">Troféus por categoria</h3>
+                    <button id="psnTierDetailsCloseBtn" class="btn btn-quiet" type="button">Fechar</button>
+                </div>
+                <div class="psn-tier-details-hero">
+                    <img id="psnTierDetailsHeroIcon" class="psn-tier-hero-icon" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="Categoria de troféu PSN">
+                    <p id="psnTierDetailsHeroLabel" class="psn-tier-hero-label">Categoria</p>
+                    <p id="psnTierDetailsHeroMeta" class="psn-tier-hero-meta"></p>
+                </div>
+                <div id="psnTierDetailsBody" class="psn-tier-details-body"></div>
+                <div id="psnTierDetailsPagination" class="psn-pagination hidden" aria-label="Paginacao de trofeus por categoria">
+                    <button id="psnTierDetailsPrevBtn" class="btn btn-outline" type="button">Anterior</button>
+                    <span id="psnTierDetailsPageLabel" class="psn-pagination-label">Pagina 1 de 1</span>
+                    <button id="psnTierDetailsNextBtn" class="btn btn-outline" type="button">Proxima</button>
+                </div>
+            </div>
+        </div>
 
         <section id="profileAchievementsSection" class="card">
             <h2>Conquistas</h2>
