--- a/public/login.html
+++ b/public/login.html
@@ -7,6 +7,32 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body data-page="login">
+    <div class="login-accessories-layer" aria-hidden="true">
+        <img
+            class="login-accessory login-accessory-controller"
+            src="/uploads/acessorios/Controle.png"
+            alt=""
+            data-base-x="0"
+            data-base-y="0"
+            data-base-rotate="-7"
+        >
+        <img
+            class="login-accessory login-accessory-headset"
+            src="/uploads/acessorios/Headphone.png"
+            alt=""
+            data-base-x="0"
+            data-base-y="0"
+            data-base-rotate="6"
+        >
+        <img
+            class="login-accessory login-accessory-mouse"
+            src="/uploads/acessorios/Mouse.png"
+            alt=""
+            data-base-x="0"
+            data-base-y="0"
+            data-base-rotate="60"
+        >
+    </div>
     <main class="auth-shell">
         <section class="auth-card">
             <img class="auth-top-logo" src="/uploads/site-logo-min.png" alt="Logo Clube do Jogo">
