--- a/public/profile.html
+++ b/public/profile.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
@@ -78,16 +78,14 @@
                         Acesse o link
                         <a class="psn-link-step-link" href="https://ca.account.sony.com/api/v1/ssocookie" target="_blank" rel="noopener noreferrer">https://ca.account.sony.com/api/v1/ssocookie</a>.
                     </li>
-                    <li>Com o JSON aberto, copie o conteudo e clique no botao Vincular PSN.</li>
-                    <li>Se não der certo, tente em outro navegador.</li>
+                    <li>Com o link aberto, copie o conteúdo e clique no botão Vincular PSN.</li>
                 </ol>
                 <ol id="psnLinkStepsListSync" class="psn-link-steps-list hidden">
                     <li>
                         Acesse o link
                         <a class="psn-link-step-link" href="https://ca.account.sony.com/api/v1/ssocookie" target="_blank" rel="noopener noreferrer">https://ca.account.sony.com/api/v1/ssocookie</a>.
                     </li>
-                    <li>Com o JSON aberto, copie o conteudo e clique no botao Vincular PSN.</li>
-                    <li>Se não der certo, tente em outro navegador.</li>
+                    <li>Com link aberto, copie o conteúdo e clique no botão Vincular PSN.</li>
                 </ol>
 </div>
             <button
@@ -107,8 +105,8 @@
             <div id="psnTitlesGrid" class="psn-titles-grid"></div>
             <div id="psnTitlesPagination" class="psn-pagination hidden" aria-label="Paginação de jogos PSN">
                 <button id="psnTitlesPrevBtn" class="btn btn-outline" type="button">Anterior</button>
-                <span id="psnTitlesPageLabel" class="psn-pagination-label">Pagina 1 de 1</span>
-                <button id="psnTitlesNextBtn" class="btn btn-outline" type="button">Proxima</button>
+                <span id="psnTitlesPageLabel" class="psn-pagination-label">Página 1 de 1</span>
+                <button id="psnTitlesNextBtn" class="btn btn-outline" type="button">Próxima</button>
             </div>
         </section>
         <div id="psnTitleDetailsModal" class="modal hidden" role="dialog" aria-modal="true" aria-labelledby="psnTitleDetailsName">
@@ -158,8 +156,8 @@
                 <div id="psnTierDetailsBody" class="psn-tier-details-body"></div>
                 <div id="psnTierDetailsPagination" class="psn-pagination hidden" aria-label="Paginação de troféus por categoria">
                     <button id="psnTierDetailsPrevBtn" class="btn btn-outline" type="button">Anterior</button>
-                    <span id="psnTierDetailsPageLabel" class="psn-pagination-label">Pagina 1 de 1</span>
-                    <button id="psnTierDetailsNextBtn" class="btn btn-outline" type="button">Proxima</button>
+                    <span id="psnTierDetailsPageLabel" class="psn-pagination-label">Página 1 de 1</span>
+                    <button id="psnTierDetailsNextBtn" class="btn btn-outline" type="button">Próxima</button>
                 </div>
             </div>
         </div>
@@ -315,6 +313,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
